--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.class
-
+bin
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -7,12 +7,9 @@
 *.jar
 *.war
 *.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 .classpath
 target
 .settings
 .springBeans
 .project
-.bin
