--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
-		<java-version>1.7</java-version>
+		<java-version>1.6</java-version>
 		<spring-version>4.0.3.RELEASE</spring-version>
+		<spring.amqp.version>1.3.7.RELEASE</spring.amqp.version>
 		<hibernate-version>4.2.7.Final</hibernate-version>
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
@@ -19,6 +20,11 @@
 		<org.slf4j-version>1.6.1</org.slf4j-version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0</version>
+		</dependency>
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -102,6 +108,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-core</artifactId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<version>${spring.amqp.version}</version>
 		</dependency>
 		<!-- Hibernate -->
 		<dependency>
