--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,9 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/billing
-jdbc.username=root
-jdbc.password=
+jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.url=jdbc:sqlserver://10.10.13.211/billing
+jdbc.username=sa
+jdbc.password=mumsql
 
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+<!--hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect--!>
 
