--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://10.10.13.252:1433;dataabaseName=bill_test
+jdbc.url=jdbc:sqlserver://10.10.12.101:1433;databaseName=bill_test
 jdbc.username=sa
 jdbc.password=mumsql
 
